--- a/model.ipynb
+++ b/model.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import datetime as dt\n",
-    "import pyomo.environ as pyo"
+    "from main import *"
    ]
   },
   {
@@ -23,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ovais\\AppData\\Local\\Temp\\ipykernel_24004\\1923840718.py:7: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ovais\\AppData\\Local\\Temp\\ipykernel_6588\\1923840718.py:7: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df.ffill(inplace=True)\n"
      ]
     }
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +119,7 @@
        "2022-01-01 05:00:00     5             7.85"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,6 +137,7 @@
     "* t: timestep\n",
     "* R_max: maximum power output/input\n",
     "* S_max: maximum battery capacity\n",
+    "* D_max: maximum daily discharge volume (to represent daily cycles)\n",
     "* F_charge: charge efficiency\n",
     "* F_discharge: discharge efficiency\n",
     "* Pt: spot price at time t\n",
@@ -161,109 +160,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2094773453.py, line 21)",
+     "ename": "KeyError",
+     "evalue": "'hour'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[204], line 21\u001b[1;36m\u001b[0m\n\u001b[1;33m    model.c1 = Constraint(expr = model.)\u001b[0m\n\u001b[1;37m                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\ovais\\anaconda3\\envs\\battery-optimisation\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'hour'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m optimal_model \u001b[38;5;241m=\u001b[39m \u001b[43moptimise_battery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\ovais\\battery_optimisation\\main.py:55\u001b[0m, in \u001b[0;36moptimise_battery\u001b[1;34m(df)\u001b[0m\n\u001b[0;32m     52\u001b[0m model \u001b[38;5;241m=\u001b[39m pyo\u001b[38;5;241m.\u001b[39mConcreteModel()\n\u001b[0;32m     54\u001b[0m \u001b[38;5;66;03m# battery parameters\u001b[39;00m\n\u001b[1;32m---> 55\u001b[0m model\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m=\u001b[39m pyo\u001b[38;5;241m.\u001b[39mSet(initialize \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhour\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m, ordered \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, doc \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhour\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     57\u001b[0m model\u001b[38;5;241m.\u001b[39mRmax \u001b[38;5;241m=\u001b[39m pyo\u001b[38;5;241m.\u001b[39mParam(initialize \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m, doc \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPower capacity. Max rate of charge/discharge. (MW)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     58\u001b[0m model\u001b[38;5;241m.\u001b[39mSmax \u001b[38;5;241m=\u001b[39m pyo\u001b[38;5;241m.\u001b[39mParam(initialize \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, doc \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnergy capacity. Max state of charge. (MWh)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\ovais\\anaconda3\\envs\\battery-optimisation\\lib\\site-packages\\pandas\\core\\frame.py:4090\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4088\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4089\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4090\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4091\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4092\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\ovais\\anaconda3\\envs\\battery-optimisation\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'hour'"
      ]
     }
    ],
    "source": [
-    "model = pyo.AbstractModel()\n",
-    "\n",
-    "# battery parameters\n",
-    "model.T = pyo.Set(initialize = hour, ordered = True,\n",
-    "                  doc = 'hour')\n",
-    "model.Rmax = pyo.Param(initialize = 100, within = NonNegativeReals,\n",
-    "                      doc = 'Power capacity. Max rate of charge/discharge. (MW)')\n",
-    "model.Smax = pyo.Param(initialize = 200, within = NonNegativeReals,\n",
-    "                   doc = 'Energy capacity. Max state of charge. (MWh)')\n",
-    "model.F_charge = pyo.Param(initialize = 0.95, bounds = (0,1),\n",
-    "                       doc = 'Charging efficiency (%)')\n",
-    "model.F_discharge = pyo.Param(initialize = 0.95, bounds = (0,1),\n",
-    "                           doc = 'Discharging efficiency')\n",
-    "model.P = pyo.Param(initialize = df[\"Price (GBP/MWh)\"].to_list())\n",
-    "\n",
-    "# optimisation variables\n",
-    "model.E_charge = pyo.Var(model.T, domain = NonNegativeReals,\n",
-    "                     doc = \"Energy charged at hour 't' (MWh)\")\n",
-    "model.E_discharge = pyo.Var(model.T, domain = NonNegativeReals,\n",
-    "                        doc = \"Energy discharged at hour 't' (MWh)\")\n",
-    "model.S = pyo.Var(model.T, bounds=(0, model.Smax),\n",
-    "              doc = \"State of charge at hour 't' (MWh)\")\n",
-    "\n",
-    "# battery constraints\n",
-    "def state_of_charge(model, t):\n",
-    "    \"\"\"\n",
-    "    At hour 't', the state of charge (SOC) is the SOC from hour 't-1'\n",
-    "    plus the net flow of energy into the battery, accounting for efficiency loss.\n",
-    "    \"\"\"\n",
-    "    if t == 1:\n",
-    "        return model.S[t] == 0\n",
-    "    else:\n",
-    "        return model.S[t] == (model.S[t-1]) \\\n",
-    "                             + (model.E_charge[t-1] * model.F_charge) \\\n",
-    "                             - (model.E_discharge[t-1] * model.F_charge)\n",
-    "    \n",
-    "model.state_of_charge = pyo.Constraint(model.T, rule = state_of_charge)\n",
-    "    \n",
-    "\n",
-    "def charge_constraint(model, t):\n",
-    "    \"\"\"\n",
-    "    The battery charges up to the power capacity for any hour t.\n",
-    "    \"\"\"\n",
-    "    return model.E_charge[t] <= model.Rmax\n",
-    "\n",
-    "model.charge = pyo.Constraint(model.T, rule = charge_constraint)\n",
-    "\n",
-    "\n",
-    "def discharge_constraint(model, t):\n",
-    "    \"\"\"\n",
-    "    The battery discharges up to the power capacity for any hour t.\n",
-    "    \"\"\"\n",
-    "    return model.E_discharge[t] <= model.Rmax\n",
-    "\n",
-    "model.discharge = pyo.Constraint(model.T, rule = discharge_constraint)\n",
-    "\n",
-    "\n",
-    "#  battery constrained to not discharge when SOC is 0  \n",
-    "def postive_charge(model, t):\n",
-    "    \"\"\"\n",
-    "    Limit discharge to amount of charge in battery, including losses\n",
-    "    \"\"\"\n",
-    "    return model.E_discharge[t] <= model.S[t] * model.F_discharge\n",
-    "\n",
-    "\n",
-    "# objective function\n",
-    "\n",
-    "\n",
-    "\n",
-    "# def objective_function(model):\n",
-    "#     return summation(model.)\n"
+    "optimal_model = optimise_battery(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Price (GBP/MWh)</th>\n",
+       "      <th>Charge (MWh)</th>\n",
+       "      <th>Discharge (MWh)</th>\n",
+       "      <th>State of Charge (MWh)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>115.95</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>149.98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>25.05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7.85</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8779</th>\n",
+       "      <td>8780</td>\n",
+       "      <td>184.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8780</th>\n",
+       "      <td>8781</td>\n",
+       "      <td>164.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8781</th>\n",
+       "      <td>8782</td>\n",
+       "      <td>150.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8782</th>\n",
+       "      <td>8783</td>\n",
+       "      <td>150.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8783</th>\n",
+       "      <td>8784</td>\n",
+       "      <td>130.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8784 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<pyomo.core.base.PyomoModel.ConcreteModel at 0x1fc5c452e00>"
+       "      Hour  Price (GBP/MWh)  Charge (MWh)  Discharge (MWh)  \\\n",
+       "0        1           115.95           1.0              0.0   \n",
+       "1        2           149.98           0.0              1.0   \n",
+       "2        3            99.99           0.0              0.0   \n",
+       "3        4            25.05           0.0              0.0   \n",
+       "4        5             7.85           0.0              0.0   \n",
+       "...    ...              ...           ...              ...   \n",
+       "8779  8780           184.95           0.0              1.0   \n",
+       "8780  8781           164.00           0.0              0.0   \n",
+       "8781  8782           150.00           0.0              0.0   \n",
+       "8782  8783           150.01           0.0              0.0   \n",
+       "8783  8784           130.10           0.0              1.0   \n",
+       "\n",
+       "      State of Charge (MWh)  \n",
+       "0                      0.00  \n",
+       "1                      0.95  \n",
+       "2                      0.00  \n",
+       "3                      0.00  \n",
+       "4                      0.00  \n",
+       "...                     ...  \n",
+       "8779                   0.95  \n",
+       "8780                   0.00  \n",
+       "8781                   0.00  \n",
+       "8782                   0.00  \n",
+       "8783                   0.00  \n",
+       "\n",
+       "[8784 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "results(optimal_model)"
+   ]
   }
  ],
  "metadata": {
